<resources>
    <string name="app_name">WebRTC Meet</string>
    <string name="logo">logo</string>
    <string name="anonymous_sign_in_logo">anonymous_sign_in_logo</string>
    <string name="google_sign_in_logo">google_sign_in_logo</string>
    <string name="sign_in_anonymously">Sign In Anonymously</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="create_sdp_offer_btn">create_sdp_offer_btn</string>
    <string name="connect">CONNECT</string>
    <string name="test_user">Test User</string>
    <string name="profile_picture">profile_picture</string>
</resources>