<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/google_sign_in_btn"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_baseline_videocam"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/loading_card"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="12dp"
        android:foregroundGravity="center"
        app:cardElevation="20dp"
        android:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/google_sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/anonymous_sign_in_btn"
        android:foregroundGravity="center"
        android:layout_marginHorizontal="80dp"
        android:layout_marginVertical="12dp"
        android:minWidth="64dp"
        android:background="@drawable/back">

        <ImageView
            android:contentDescription="@string/google_sign_in_logo"
            android:id="@+id/google_logo"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_google_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="9dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/google_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/sign_in_with_google"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/anonymous_sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:foregroundGravity="center"
        android:layout_marginHorizontal="80dp"
        android:layout_marginVertical="12dp"
        android:minWidth="64dp"
        android:background="@drawable/back">

        <ImageView
            android:contentDescription="@string/anonymous_sign_in_logo"
            android:id="@+id/anonymous_logo"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_incognito"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="9dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/anonymous_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/sign_in_anonymously"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>